demo code/Delphi/dlbt.pas


//=======================================================================================
//  内核的启动和关闭函数，商业授权版才有私有协议功能，演示版和个人免费版只能用标准BT方式
//=======================================================================================
function DLBT_Startup(
         port: PDLBT_KERNEL_START_PARAM = nil;      // 内核启动设置，参考DLBT_KERNEL_START_PARAM，如果为nil，则使用内部默认设置
         privateProtocolIDs: LPCSTR = nil;          // 可以自定义私有协议，突破运营商限制。如果为NULL，则作为标准的BT客户端启动
                                                    // 点量BT的私有协议在3.4版本中进行了全新改进，可以穿透大部分运营商对协议的封锁
         seedServerMode: boolean = False;           // 是否上传模式，上传模式内部有些参数进行了优化，适合大并发上传，但不建议普通客户端启用，只建议上传服务器使用
                                                    // 专业上传服务器模式仅在商业版中有效，演示版暂不支持该功能。详见使用说明文档
         ProductNum: LPCSTR = nil
         ): boolean; stdcall;                       // 专业上传服务器模式仅在商业版中有效，演示版和个人免费版暂不支持该功能。详见使用说明文档


// 获得内核监听的端口
function DLBT_GetListenPort():USHORT; stdcall;

// 最后关闭点量BT内核
procedure DLBT_Shutdown(); stdcall;

// 由于关闭的速度可能会比较慢(需要通知Tracker Stop), 所以可以调用该函数提前通知,提高下线速度
// 然后最后在程序最后退出时调用DLBT_Shutdown等待真正的结束
procedure DLBT_PreShutdown(); stdcall;

//=======================================================================================
//  内核的上传下载速度、最大连接用户数的设置
//=======================================================================================
// 速度限制，单位是字节(BYTE)，如果需要限速1M，请输入 1024*1024
procedure DLBT_SetUploadSpeedLimit(limit: int); stdcall;
procedure DLBT_SetDownloadSpeedLimit(limit: int); stdcall;
// 最大连接数（真正完成连接的连接数）
procedure DLBT_SetMaxUploadConnection(limit: int); stdcall;
procedure DLBT_SetMaxTotalConnection(limit: int); stdcall;

// 最多发起的半开连接数（很多连接可能是发起了，但还没连上）
procedure DLBT_SetMaxHalfOpenConnection(limit: int); stdcall;

//=======================================================================================
//  设置局域网自动发现的一些设置, interval_seconds组播周期秒数：建议不要低于10s； bUseBroadcast: 是否使用广播模式
//  默认内部使用组播，如果使用广播，可能局域网有无用流量太多，一般不建议
//=======================================================================================
procedure DLBT_SetLsdSetting (interval_seconds: int; bUseBroadcast: bool); stdcall;

// 设置P2SP时需要的扩展名、是否随机一个参数，以及服务器对中文文件名路径的编码
//扩展名：用于防止一些运营商对http有他们网内缓存，所以导致下载的是缓存的老版本的文件。可以考虑使用一个.php这种扩展名，防止他们用缓存
//但需要服务器配置将.php后缀忽略，返回真正的文件，可以通过nginx的rewrite等规则实现
//是否随机一个?a=b这种参数，也是防止缓存的，但不是对所有运营商都有效
//bUtf8：是否使用utf8的路径编码，默认是true。可以设置false（如果有些中文路径获取不到）
// 该函数为全局的，不是针对某个任务设置
procedure DLBT_SetP2SPExtName (extName: LPCSTR; bUseRandParam: bool; bUtf8: bool); stdcall;

// 用于设置是否对跟自己在同一个局域网的用户限速，limit如果为true，则使用后面参数中的限速数值进行限速，否则不限。默认不对同一个局域网下的用户应用限速。
procedure DLBT_SetLocalNetworkLimit(
	   Limit: bool;		 // 是否启用局域网限速
	   downSpeedLimit: int;	// 如果启用局域网限速，下载限速的大小，单位字节/秒
	   uploadSpeedLimit:int  // 如果启用局域网限速，限制上传速度大小，单位字节/秒
	  ); stdcall;


// 设置文件扫描校验时的休息参数，circleCount代表循环多少次做一次休息。默认是0（也就是不休息）
// sleepMs代表休息多久，默认是1ms
procedure DLBT_SetFileScanDelay (circleCount:DWORD; sleepMs:DWORD); stdcall;

// 设置文件下载完成后，是否修改为原始修改时间（制作种子时每个文件的修改时间状态）。调用该函数后，制作的torrent中会包含有每个文件此时的修改时间信息
// 用户在下载时，发现有这个信息，并且调用了该函数后，则会在每个文件完成时，自动将文件的修改时间设置为torrent种子中记录的时间
// 如果只是下载的机器上启用了该函数，但制作种子的机器上没有使用该函数（种子中没有每个文件的时间信息），则也无法进行时间修改
procedure DLBT_UseServerModifyTime(bUseServerTime:BOOL); stdcall;

// 是否启用UDP穿透传输功能，默认是自动适应，如果对方支持，在tcp无法到达时，自动切换为udp通讯
procedure DLBT_EnableUDPTransfer(bEnabled:BOOL);stdcall;

// 是否启用伪装Http传输，某些地区（比如马来西亚、巴西的一些网络）对Http不限速，但对P2P限速在20K左右，这种网络环境下，可以启用Http传输
//  默认是允许伪装Http的传输进入（可以接受他们的通讯），但自己发起的连接不主动伪装。 如果客户群中有这类用户，可以考虑都设置：主动伪装。
// 但这种伪装也有副作用，国内有些地区机房（一般是网通）设置了Http必须使用域名，而不能使用IP，而BT传输中，对方没有合法域名，反而会被这种限制截杀
// 如果有这种限制，反而主动伪装后会没有速度。所以请根据实际使用选择。
procedure DLBT_SetP2PTransferAsHttp (bHttpOut:bool; bAllowedIn:bool); stdcall;

// 是否使用单独的穿透服务器，如果不使用单独服务器，穿透的协助将由某个双方都能连上的第三方p2p节点辅助完成
function DLBT_AddHoleServer(ip:LPCSTR; port:USHORT): BOOL; stdcall;

// 设置服务器的IP，可以多次调用设置多个，用于标记哪些IP是服务器，以便统计从服务器下载到的数据等信息，甚至速度到了一定程度可以断开服务器连接，节省服务器带宽
procedure DLBT_AddServerIP (ip:LPCSTR); stdcall;
// 不去连接这个p2sp的url，可以重复调用. 目的是，如果是服务器上，这个p2sp的url就在本机，就没必要去连接这个url了
procedure DLBT_AddBanServerUrl (ip:LPCSTR); stdcall;

// 保存一次状态文件的条件，内部默认全部下载完成后保存一次。可以调整为自己需要的时间或者上限数目，比如每5分钟保存一次，或者下载100块数据后保存一次
function DLBT_SetStatusFileSavePeriod (
    iPeriod:int;              //保存间隔，单位是秒。默认是0，代表除非下载完成，否则永不保存
    iPieceCount:int            //分块数目，默认0，代表除非下载完成，否则永不保存
    ):BOOL; stdcall;


//=======================================================================================
//  设置报告Tracker的本机IP，内网下载和供种时设置自己NAT的公网IP会比较有效，详细参考
//  点量BT的使用说明文档
//=======================================================================================
procedure DLBT_SetReportIP(ip: LPCSTR); stdcall;
function  DLBT_GetReportIP(): LPCSTR; stdcall;
procedure DLBT_SetUserAgent(agent: LPCSTR); stdcall;

//=======================================================================================
//  设置磁盘缓存，3.3版本后已对外开放，3.3版本后系统内部自动设置8M缓存，如需调整可使用该
//  函数进行调整，单位是K，比如要设置1M的缓存，需要传入1024
//=======================================================================================
procedure DLBT_SetMaxCacheSize(size: DWORD); stdcall;

// 一些性能参数设置，默认情况下，点量BT是为了普通网络环境下的上传和下载所用，如果是在千M局域网下
// 并且磁盘性能良好，想获得50M/s甚至100M/s的单个文件传输速度，则需要设置这些参数。或者想节约内存，也可以设置这些参数
// 具体参数的设置建议，请咨询点量软件获取

procedure DLBT_SetPerformanceFactor(
                                    socketRecvBufferSize: int;      // 网络的接收缓冲区，默认是用操作系统默认的缓冲大小
                                    socketSendBufferSize: int;      // 网络的发送缓冲区，默认用操作系统的默认大小
                                    maxRecvDiskQueueSize: int;      // 磁盘如果还未写完，超过这个参数后，将暂停接收，等磁盘数据队列小于该参数
                                    maxSendDiskQueueSize: int       // 如果小于该参数，磁盘线程将为发送的连接塞入数据，超过后，将暂停磁盘读取
                                    ); stdcall;


//=======================================================================================
//  DHT相关函数,port是DHT监听的端口（udp端口），如果为0则使用内核监听的TCP端口号监听
//=======================================================================================
procedure DLBT_DHT_Start(port: USHORT = 0); stdcall;
procedure DLBT_DHT_Stop(); stdcall;
function DLBT_DHT_IsStarted(): boolean; stdcall;

//=======================================================================================
//  设置代理相关函数,商业授权版才有此功能，演示版和个人免费版暂不提供
//=======================================================================================

procedure DLBT_SetProxy(
                        proxySetting: DLBT_PROXY_SETTING;   // 代理设置，包括IP端口等
                        proxyTo: int                          // 代理应用于哪些连接，就是上面宏定义的几种类型，比如DLBT_PROXY_TO_ALL
                        ); stdcall;

//=======================================================================================
//  获取代理的设置，proxyTo标识想获得哪一类连接的代理信息，但proxyTo只能单个获取某类连接
//  的代理设置，不能使用DLBT_PROXY_TO_ALL这种多个混合选择
//=======================================================================================
procedure DLBT_GetProxySetting (proxySetting : PDLBT_PROXY_SETTING; proxyTo:int); stdcall;

//=======================================================================================
//  设置加密相关函数,将协议字符串或者所有数据均加密，实现保密传输，在兼容BT协议上突破
//  绝大部分运营商的封锁。和前面提到的私有协议不同的是，私有协议后将形成自己
//  的P2P网络，不能同其它BT客户端兼容；但私有协议完全不是BT协议了，没有BT的痕迹，可以穿透
//  更多运营商的封锁。不同的网络下，可能需要不同设置。配合伪装Http使用，在某些网络下效果更佳
//=======================================================================================
procedure DLBT_SetEncryptSetting(
      encryptOption: DLBT_ENCRYPT_OPTION;           // 加密选项，加密哪种类型或者不加密
      encryptLevel: DLBT_ENCRYPT_LEVEL); stdcall;   // 加密的程度，对数据还是协议加密？


// ***************************  以下是单个下载相关的接口 ********************************
//=======================================================================================
//  启动一个文件的下载，返回这个下载的句柄，以后对该下载任务的所有操作，需要根据句柄来进行
//=======================================================================================
function  DLBT_Downloader_Initialize(
                                    torrentFile: LPCWSTR;                                               // 种子文件的路径（具体到文件名）
                                    outPath: LPCWSTR;                                                   // 下载后的保存路径（只是目录）
                                    statusFile: LPCWSTR;                                          // 状态文件的路径
                                    fileAllocateType: DLBT_FILE_ALLOCATE_TYPE = FILE_ALLOCATE_SPARSE;  // 文件分配模式
                                    bPaused: boolean = FALSE;                                          // 是否不立即运行下载任务，打开句柄后暂停任务的启动
                                    bQuickSeed: boolean = FALSE;                                       // 是否快速供种（仅商业版提供）
                                    password: LPCSTR = nil;                                            // 是否加密种子，如果为Null，则是普通种子，否则是种子的密码，试用版不支持，该参数会被忽略
                                    rootPathName: LPCWSTR = nil;                                        // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
                                                                                                        // 对单个文件则直接进行改名为指定的这个名字
                                    bPrivateProtocol: Boolean = FALSE;					// 该种子是否私有协议（可以对不同种子采用不同的下载方式）
                                    bZipTransfer:Boolean = FALSE			// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
                                    ):HANDLE; stdcall;

// 启动一个内存中的种子文件内容，可用于种子文件被自己加密了的情况下，或者种子文件不是独立存储等情况下
function  DLBT_Downloader_Initialize_FromBuffer(
                                               torrentFile: PBYTE;                                             // 内存中的种子文件内容
                                               dwTorrentFileSize: DWORD;                                        // 种子内容的大小
                                               outPath: LPCWSTR;                                                 // 下载后的保存路径（只是目录）
                                               statusFile: LPCWSTR;                                        // 状态文件的路径
                                               fileAllocateType: DLBT_FILE_ALLOCATE_TYPE = FILE_ALLOCATE_SPARSE;// 文件分配模式
                                               bPaused: boolean = FALSE;
                                               bQuickSeed: boolean = FALSE;                                     // 是否快速供种（仅商业版提供）
                                               password: LPCSTR = nil;                                          // 是否加密种子，如果为Null，则是普通种子，否则是种子的密码，试用版不支持，该参数会被忽略
                                               rootPathName: LPCWSTR = nil;                                     // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
                                                                                                               // 对单个文件则直接进行改名为指定的这个名字
				                               bPrivateProtocol: boolean = FALSE;		              // 该种子是否私有协议（可以对不同种子采用不同的下载方式）
                                               bZipTransfer:Boolean = FALSE			// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
                                              ): HANDLE; stdcall;
